# artipy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  artipy.analysis.html  artipy.artifacts.html  artipy.html  artipy.stats.html  example.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pylintrc  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  lint.yml  main.yml  release.yml  test.yml
_modules/: index.html
_modules/artipy/: data_gen.html  types.html
_modules/artipy/analysis/: analyse.html  plots.html  simulate.html
_modules/artipy/artifacts/: artifact.html  builder.html  upgrade_strategy.html  utils.html
_modules/artipy/stats/: mainstat.html  stats.html  substat.html  utils.html
_sources/: artipy.rst.txt  modules.rst.txt
artipy/: __init__.py  analysis.py  artifacts.py  data_gen.py  stats.py  types.py  utils.py
docs/: CNAME  artipy.analysis.rst  artipy.artifacts.rst  artipy.rst  artipy.stats.rst  conf.py  index.rst  modules.rst
docs/source/: index.rst  modules.rst
src/artipy/: __init__.py  cli.py  data_gen.py  gui.py  types.py
src/artipy/analysis/: __init__.py  analyse.py  plots.py  simulate.py
src/artipy/artifacts/: __init__.py  artifact.py  builder.py  upgrade_strategy.py  utils.py
src/artipy/data/: substat_data.json
src/artipy/stats/: __init__.py  mainstat.py  stat_data.py  stats.py  substat.py  utils.py
tests/: test_analysis.py  test_artifacts.py  test_stats.py
