[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "artipy"
version = "1.0.0"
description = ""
authors = [ "Truman Mulholland <truman.mulholland@gmail.com>" ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
toml = "^0.10.2"
plotly = "^5.20.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
python-semantic-release = "^9.4.1"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
ghp-import = "^2.1.0"

[tool.black]
line-length = 88
required-version = ["24.4.0"]
target-version = ["py312"]

[tool.ruff]
line-length = 88
fix = true
select = ["F", "E", "W", "I001"]

[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = [ "tests/" ]

[tool.isort]
profile = "black"
src_paths = [ "src/", "tests/" ]

[tool.semantic_release]
version_variable = [ "src/artipy/__init__.py:__version__" ]
version_toml = [ "pyproject.toml:tool.poetry.version" ]
build_command = "poetry build"
version_source = "tag"
commit_version_number = true
commit_message = "chore(release): v{version} [skip ci]"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
exclude = [ "tests/" ]